@@ -186,6 +186,9 @@ RELEASE 0.95 - XXX
     having the same string re-appended to the end, yielding an incorrect
     path name.
 
+  - Supply a more descriptive error message when the source for a target
+    can't be found.
+
   From Vincent Risi:
 
   - Add support for the bcc32, ilink32 and tlib Borland tools.
